fixed minor problems in login client side template

--- a/social_network/public/templates/login.html
+++ b/social_network/public/templates/login.html
@@ -3,13 +3,12 @@
 <form>
 <fieldset>
 	<legend>Credentials</legend>
-	<p class="error id="error"></p>
+	<p class="error" id="error" style="color: #ff0000"></p>
 
 	<label>
 		Email:
 		<input type="text" name="email" />
 	</label>
-
 
 	<br />
 
@@ -23,6 +22,6 @@
 </form>
 
 <ul>
-	<li><a href="#forgotpassword">Forgot Password</a>
+	<li><a href="#forgot-password">Forgot Password</a>
 	<li><a hreF="#register">Sign Up</a></li>
 </ul>
