--- a/social_network/views/reset_password.jade
+++ b/social_network/views/reset_password.jade
@@ -3,8 +3,9 @@ extends layout
 block content
 	form(action='/reset-password', method='post')
 
-	input(type='hidden', name='accountId', value='#{locals.accountId}')
-	p
-		label(for='password') New Password: input(type='password', name='password')
-	p
-		input(type='submit')
+		input(type='hidden', name='accountId', value='#{locals.accountId}')
+		p
+			label(for='password') New Password:
+			input(type='password', name='password')
+		p
+			input(type='submit')
