created user interface, support for status updating

--- a/social_network/public/templates/index.html
+++ b/social_network/public/templates/index.html
@@ -1,1 +1,15 @@
-<p>My First Social Network Content</p>
+<h1>My First Social Network</h1>
+
+<h2>Activity Stream</h2>
+
+<form>
+	<fieldset>
+		<legend>Update My Status</legend>
+		<input type="text" name="status" />
+		<input type="submit" value="Add" />
+	</fieldset>
+</form>
+
+<ul class="status-list" />
+
+<p><a href="#profile/me">See My Profile</a></p>
